# ChangeLog for media-gfx/graphicsmagick
# Copyright 2000-2004 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-gfx/graphicsmagick/ChangeLog,v 1.14 2004/12/29 00:33:39 ciaranm Exp $

  29 Dec 2004; Ciaran McCreesh <ciaranm@gentoo.org> :
  Change encoding to UTF-8 for GLEP 31 compliance

  11 Dec 2004; Bryan Østergaard <kloeri@gentoo.org>
  graphicsmagick-1.0.6.ebuild, graphicsmagick-1.1.4.ebuild:
  Fix ghostscript dependency.

  20 Nov 2004; Daniel Black <dragonheart@gentoo.org>
  graphicsmagick-1.1.4.ebuild:
  ppc keyword

  18 Nov 2004; Luca Barbato <lu_zero@gentoo.org>
  graphicsmagick-1.1.4.ebuild:
  Marked ~ppc

*graphicsmagick-1.1.4 (18 Nov 2004)

  18 Nov 2004; Bryan Østergaard <kloeri@gentoo.org>
  -graphicsmagick-1.1.2.ebuild, -graphicsmagick-1.1.3.ebuild,
  +graphicsmagick-1.1.4.ebuild:
  Security bump, bug 71573.

  01 Nov 2004; Donnie Berkholz <spyderous@gentoo.org>;
  graphicsmagick-1.0.6.ebuild, graphicsmagick-1.1.2.ebuild,
  graphicsmagick-1.1.3.ebuild:
  Remove >=app-text/dgs-0.5.9.1 dep on USE=X because virtual/x11 provides all
  the same stuff, and they actually overwrite each other's files. Approved by
  sekretarz.

  05 Oct 2004; Bryan Østergaard <kloeri@gentoo.org> :
  Depend on virtual/ghostscript, closes bug 66454.

*graphicsmagick-1.1.3 (04 Oct 2004)

  04 Oct 2004; Bryan Østergaard <kloeri@gentoo.org>
  +graphicsmagick-1.1.3.ebuild:
  Version bump.

  18 Jun 2004; Aron Griffis <agriffis@gentoo.org> graphicsmagick-1.1.2.ebuild:
  Fix use invocation

*graphicsmagick-1.1.2 (14 Jun 2004)

  14 Jun 2004; Bryan Østergaard <kloeri@gentoo.org> +metadata.xml,
  +graphicsmagick-1.1.2.ebuild:
  Bump version and add metadata.xml.

  08 Jun 2004; David Holm <dholm@gentoo.org> graphicsmagick-1.0.6.ebuild:
  Added to ~ppc.

  07 Jun 2004; Aron Griffis <agriffis@gentoo.org> graphicsmagick-1.0.6.ebuild:
  Fix use invocation

*graphicsmagick-1.0.6 (05 Jun 2004)

  05 Jun 2004; Bryan Østergaard <kloeri@gentoo.org>