@@ -1,0 +1,1 @@
+MD5 bcbfa575bda5357478b97ff6430b8bde GraphicsMagick-1.1.5.tar.bz2 4949815
