@@ -1,6 +1,12 @@
 # ChangeLog for media-gfx/graphicsmagick
-# Copyright 2000-2004 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-gfx/graphicsmagick/ChangeLog,v 1.14 2004/12/29 00:33:39 ciaranm Exp $
+# Copyright 2000-2005 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/media-gfx/graphicsmagick/ChangeLog,v 1.15 2005/01/24 21:58:57 kloeri Exp $
+
+*graphicsmagick-1.1.5 (24 Jan 2005)
+
+  24 Jan 2005; Bryan Østergaard <kloeri@gentoo.org>
+  +graphicsmagick-1.1.5.ebuild:
+  Version bump, bug 79336.
 
   29 Dec 2004; Ciaran McCreesh <ciaranm@gentoo.org> :
   Change encoding to UTF-8 for GLEP 31 compliance
